...
}

 struct InputTextRequestView_Previews: PreviewProvider {
    static var previews: some View {
        InputTextRequestView(inputTextRequest:
                                InputTextRequest(description: "Input your response",
                                                 fromPlayer: Player(name: "Player 2"),
                                                 toPlayer: Player(name: "Player 1 "),
                                                 callback: Callback()),
                             isOnline: false)
    }
 }

